added css for image(logo)
center aligned the logo and chnaged the height of logo

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,4 +10,10 @@
 .logo_container{
     width: 86%;
     
+    text-align: center;
+    
+}
+.logo_container img{
+    width: 19%;
+	height: 32px;
 }
